tests/src/frontend/typechecking/invalid/overridable_const6.sk
base class MyBase {
  const x: Int = 12;
}

class Child() extends MyBase {
  const x: Int;
}
